[gd_scene load_steps=19 format=2]

[ext_resource path="res://resources/shiny.gdshader" type="Shader" id=1]
[ext_resource path="res://resources/in_game.theme" type="Theme" id=2]
[ext_resource path="res://scripts/LeaderboardOverlay.gd" type="Script" id=3]
[ext_resource path="res://scenes/UI/LoadingAnimation.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/RacingSansOne-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 2.0
content_margin_bottom = 6.0
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
corner_radius_top_left = 7
corner_radius_top_right = 7

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 1 )
shader_param/shininess = 2.0
shader_param/shiny_color = Plane( 1, 1, 1, 0.9 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.377, 0.52715, 0.65, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.3074, 0.42983, 0.53, 1 )
corner_radius_top_left = 55
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.2925, 0.544125, 0.75, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.2535, 0.471575, 0.65, 1 )
corner_radius_top_left = 55
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.2535, 0.471575, 0.65, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.2262, 0.42079, 0.58, 1 )
corner_radius_top_left = 55
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.1677, 0.311965, 0.43, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.141176, 0.258824, 0.360784, 1 )
corner_radius_top_left = 55
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.2, 0.2, 0.2, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.164706, 0.164706, 0.164706, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 5

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
CheckButton/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0.941176, 0.941176, 0.941176, 1 )
CheckButton/colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
CheckButton/styles/hover_pressed = SubResource( 7 )
CheckButton/styles/pressed = SubResource( 4 )
GridContainer/constants/hseparation = 25
GridContainer/constants/vseparation = 5
HBoxContainer/constants/separation = 10
MarginContainer/constants/margin_bottom = 30
MarginContainer/constants/margin_left = 15
MarginContainer/constants/margin_right = 15
MarginContainer/constants/margin_top = 30
PanelContainer/styles/panel = SubResource( 6 )
VBoxContainer/constants/separation = 10

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.2925, 0.544125, 0.75, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.2535, 0.471575, 0.65, 1 )
corner_radius_top_left = 62
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.1677, 0.311965, 0.43, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.141176, 0.258824, 0.360784, 1 )
corner_radius_top_left = 62
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.2925, 0.544125, 0.75, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.2535, 0.471575, 0.65, 1 )
corner_radius_top_left = 62
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 55.0
content_margin_right = 55.0
bg_color = Color( 0.2535, 0.471575, 0.65, 1 )
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.2262, 0.42079, 0.58, 1 )
corner_radius_top_left = 62
corner_radius_top_right = 4
corner_radius_bottom_right = 55
corner_detail = 1

[node name="LeaderboardOverlay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -4782, 220 )
theme = ExtResource( 2 )
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
script = ExtResource( 3 )

[node name="VCenter" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1316.0
margin_bottom = 718.0
alignment = 1

[node name="HCenter" type="HBoxContainer" parent="VCenter"]
margin_right = 1266.0
margin_bottom = 668.0
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VCenter/HCenter"]
margin_left = 308.0
margin_right = 958.0
margin_bottom = 668.0
rect_min_size = Vector2( 650, 0 )
size_flags_vertical = 3

[node name="PanelLayout" type="VBoxContainer" parent="VCenter/HCenter/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 647.0
margin_bottom = 665.0
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="VCenter/HCenter/PanelContainer/PanelLayout"]
margin_right = 644.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_styles/normal = SubResource( 3 )
text = "Map name"
align = 1

[node name="ContentMargin" type="MarginContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout"]
margin_top = 79.0
margin_right = 644.0
margin_bottom = 662.0
size_flags_vertical = 3
custom_constants/margin_top = 5

[node name="ContentLayout" type="VBoxContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin"]
margin_left = 15.0
margin_top = 5.0
margin_right = 629.0
margin_bottom = 553.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout"]
margin_right = 614.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="RankingScroll" type="ScrollContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container"]
visible = false
margin_right = 15.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="RankingMargin" type="MarginContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container/RankingScroll"]
margin_right = 15.0
size_flags_horizontal = 3
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="RankingList" type="VBoxContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container/RankingScroll/RankingMargin"]
size_flags_horizontal = 3

[node name="EmptyLeaderboardLabel" type="Label" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container"]
modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
margin_top = 105.0
margin_right = 614.0
margin_bottom = 166.0
size_flags_vertical = 1
text = "No entry"
align = 1

[node name="SubmissionPreview" type="HBoxContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container"]
modulate = Color( 0.509804, 0.756863, 0.960784, 1 )
margin_top = 176.0
margin_right = 614.0
margin_bottom = 237.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="RankLabel" type="Label" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container/SubmissionPreview"]
material = SubResource( 9 )
margin_right = 94.0
margin_bottom = 61.0
rect_min_size = Vector2( 94, 0 )
text = "900"
align = 1

[node name="NameLabel" type="Label" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container/SubmissionPreview"]
modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
margin_left = 114.0
margin_right = 437.0
margin_bottom = 61.0
size_flags_horizontal = 3
text = "PlayerName"
clip_text = true

[node name="TimeLabel" type="Label" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container/SubmissionPreview"]
margin_left = 457.0
margin_right = 614.0
margin_bottom = 61.0
text = "2:13.37"

[node name="LoadingAnimation" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/Container" instance=ExtResource( 4 )]
margin_top = 247.0
margin_right = 614.0
margin_bottom = 287.0

[node name="SubmitContainer" type="HBoxContainer" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout"]
margin_top = 402.0
margin_right = 614.0
margin_bottom = 470.0
theme = SubResource( 8 )
custom_constants/separation = 0

[node name="NameEdit" type="LineEdit" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/SubmitContainer"]
margin_right = 346.0
margin_bottom = 68.0
size_flags_horizontal = 3
align = 1
max_length = 10
placeholder_text = "Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="SubmitButton" type="Button" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout/SubmitContainer"]
margin_left = 346.0
margin_right = 614.0
margin_bottom = 68.0
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
text = "Submit"

[node name="CloseButton" type="Button" parent="VCenter/HCenter/PanelContainer/PanelLayout/ContentMargin/ContentLayout"]
margin_top = 480.0
margin_right = 614.0
margin_bottom = 548.0
text = "Back"

[node name="RankTemplate" type="HBoxContainer" parent="."]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 1316.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 20

[node name="RankLabel" type="Label" parent="RankTemplate"]
material = SubResource( 9 )
margin_right = 94.0
margin_bottom = 61.0
rect_min_size = Vector2( 94, 0 )
text = "900"
align = 1

[node name="NameLabel" type="Label" parent="RankTemplate"]
modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
margin_left = 104.0
margin_right = 105.0
margin_bottom = 61.0
size_flags_horizontal = 3
text = "PlayerName"
clip_text = true

[node name="TimeLabel" type="Label" parent="RankTemplate"]
margin_left = 115.0
margin_right = 272.0
margin_bottom = 61.0
text = "2:13.37"
